--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jspdf": "3.0.1",
+    "jspdf-autotable": "5.0.2",
+    "lucide-react": "0.525.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "lucide-react": "0.525.0",
-    "xlsx": "0.18.5",
-    "jspdf": "3.0.1",
-    "jspdf-autotable": "5.0.2"
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@tailwindcss/postcss": "^4.1.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "vite": "^5.0.0"
   }
 }
-
